cluster/apps/homeassistant/homeassistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    matchLabels:
      app: homeassistant
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      restartPolicy: Always
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:2022.8.4
          ports:
            - name: web
              containerPort: 8123
          volumeMounts:
            - name: homeassistant
              mountPath: /config
              subPath: homeassistant
        - name: vscode
          image: lscr.io/linuxserver/code-server:4.5.1
          ports:
            - name: code
              containerPort: 8443
          volumeMounts:
            - name: homeassistant
              mountPath: /config
              subPath: vscode
            - name: homeassistant
              mountPath: /config/workspace
              subPath: homeassistant
      volumes:
        - name: homeassistant
          persistentVolumeClaim:
            claimName: homeassistant
