cluster/apps/homeassistant/homeassistant/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
  namespace: homeassistant
subsets:
  - addresses:
        - ip: 10.0.1.71
    ports:
      - name: http
        port: 8123
