cluster/apps/homeassistant/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  ports:
    - name: http
      port: 8123
