cluster/apps/homeassistant/homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeassistant
  annotations:
    external-dns.alpha.kubernetes.io/target: "home.${SECRET_PRIVATE_DOMAIN}"
    external-dns/is-public: "true"
    haproxy.org/response-set-header: |
      Strict-Transport-Security "max-age=31536000"
      X-Content-Type-Options "nosniff"
      Referrer-Policy "no-referrer-when-downgrade"
      server "."
spec:
  rules:
    - host: "ha.${SECRET_PRIVATE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
  tls:
    - secretName: "${SECRET_PRIVATE_DOMAIN_CERT}"
      hosts:
        - "ha.${SECRET_PRIVATE_DOMAIN}"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-codeserver
  namespace: homeassistant
  annotations:
    haproxy.org/whitelist: "${HAPROXY_WHITELIST}"
    haproxy.org/response-set-header: |
      Strict-Transport-Security "max-age=31536000"
      X-Content-Type-Options "nosniff"
      Referrer-Policy "no-referrer-when-downgrade"
spec:
  rules:
    - host: "hacode.${SECRET_PRIVATE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vscode
                port:
                  number: 8443
  tls:
    - secretName: "${SECRET_PRIVATE_DOMAIN_CERT}"
      hosts:
        - "vscode.${SECRET_PRIVATE_DOMAIN}"
